# talenteer

./: .env  Cargo.toml  LICENSE
migrations/20170611000000_create_uuid_extension/: down.sql
migrations/20170611113013_create_talents/: down.sql  up.sql
migrations/20170611155329_create_index_talents_username/: down.sql  up.sql
src/: main.rs  schema.rs
src/talent/: handlers.rs  mod.rs  model.rs  serializer.rs
