[package]
name = "talenteer"
version = "0.1.0"
authors = ["Wiwatta  Mongkhonchit <zentetsukenz@gmail.com>"]

[dependencies]
iron = "0.5.*"
router = "*"
bodyparser = "0.7"
persistent = "*"

serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"

diesel = { version = "0.13.0", features = ["postgres"] }
diesel_codegen = { version = "0.13.0", features = ["postgres"] }

dotenv = "0.9.0"
